# FastPNG

./: FastPNGTOWEBP.PY  README.md  build_fast_debug.bat  gradle.properties  settings.gradle.kts
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  native_image_pipeline.cpp
src/main/java/org/nvmetools/fastpngtowebpandroid/: FileScanner.kt  FormatDetector.kt  ImageTranscoder.kt  JobRuntime.kt  MainActivity.kt  NativeImagePipeline.kt  SafScanner.kt  ThroughputGraphView.kt  TranscodeService.kt
src/main/res/drawable/: log_background.xml
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml  themes.xml
src/test/java/org/nvmetools/fastpngtowebpandroid/: FormatDetectorTest.kt
